--- a/Main/src/interfaz/VentanaERP.form
+++ b/Main/src/interfaz/VentanaERP.form
@@ -64,6 +64,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Alta"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="managerAltaActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="managerBaja">
               <Properties>
