--- a/Main/src/interfaz/VentanaComenzar.form
+++ b/Main/src/interfaz/VentanaComenzar.form
@@ -84,6 +84,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Sistema con datos Precargados"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="botonGuardado">
           <Properties>
